src/objects/Event_Booking__c.object
<CustomObject>
    <description>This Object Related to Events and book a event</description>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <formula>Customer_Name__r.Email</formula>
        <label>Customer Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Enter Customer Name</description>
        <label>Customer Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Event Booking</relationshipLabel>
        <relationshipName>Event_Bookings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Phone_Number__c</fullName>
        <formula>Customer_Name__r.MobilePhone</formula>
        <label>Customer Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Debit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Direct Debit</label>
        <referenceTo>Direct_Debits__c</referenceTo>
        <relationshipName>Event_Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <description>All Events</description>
        <label>Event Name</label>
        <referenceTo>Events__c</referenceTo>
        <relationshipName>Events_Bookings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Event_Ticket_Type__c</fullName>
        <label>Event Ticket Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Platinum -£750</fullName>
                </value>
                <value>
                    <fullName>Gold -£500</fullName>
                </value>
                <value>
                    <fullName>Silver -£350</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Venue_Details__c</fullName>
        <formula>Event_Name__r.Event_Venue_Details__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Venue Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <description>Choose payment type</description>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Debit/Credit Card</fullName>
                </value>
                <value>
                    <fullName>Net Banking</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Cheque</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Event Booking</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Event_Name__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Customer_Phone_Number__c</columns>
        <columns>Event_Ticket_Type__c</columns>
        <columns>Payment_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Events_Booking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Booking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>